@@ -409,3 +409,4 @@ test.patterns.explanation=The test patterns available here should help you calib
 youtube.url.label=Youtube video URL
 no.tdb.heading=TurboDB Data Exchange not found
 no.tdb.message=For technical reasons, you need to download TurboDB data exchange (http://bit.ly/1gwoPLX) before Quelea can import ZionWorx databases.\nWhen you've downloaded it, extract the contents of the zip file to $1.\n\nIf you have any issues, then please feel free to ask on the discussion group here: (http://bit.ly/1mePoeh)
+show.verse.numbers=Show verse numbers
